--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,9 @@
 filter:
     excluded_paths: [tests/*]
 
+tools:
+    external_code_coverage: true
+
 checks:
     php:
         remove_extra_empty_lines: true
